--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "library",
     "require": {
         "ext-json": "*",
-        "guzzlehttp/guzzle": "^7.8"
+        "guzzlehttp/guzzle": "^7.8",
+        "nesbot/carbon": "^3.5"
     },
     "autoload": {
         "psr-4": {
@@ -15,5 +16,13 @@
             "name": "Daniel Withams",
             "email": "me@danwithams.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "pestphp/pest": "^2.34"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    }
 }
