--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
     "name": "danwithams/trading212-api",
     "type": "library",
+    "scripts": {
+        "test": "./vendor/bin/pest"
+    },
     "require": {
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.8",
-        "nesbot/carbon": "^3.5"
+        "nesbot/carbon": "^3.5",
+        "illuminate/collections": "^11.14"
     },
     "autoload": {
         "psr-4": {
